--- a/likethat.html
+++ b/likethat.html
@@ -192,7 +192,7 @@ margin-right: 3%;
             </div>
 
             <style>
-                .ccoments{
+                .ccomments{
                     background-color: silver;
                 }
 
