--- a/vermouthrumor.html
+++ b/vermouthrumor.html
@@ -191,11 +191,24 @@ margin-right: 3%;
     
             </div>
 
+            <style>
+                .ccomments{
+                    background-color: silver;
+                }
+
+                @media only screen and (max-width: 1300px){
+                    .ccomments{
+                        margin-left: 0;
+                        margin-right:0;
+                        background-color: silver;
+                    }
+                }
+            </style>
             <div class = "ccomments">
-                <div class ="comments">
-                    <div class="fb-comments" data-href="https://likethat.com" data-width="100%" data-numposts="10"></div>
-                </div>
-                </div>
+            <div class ="comments">
+                <div class="fb-comments" data-href="https://likethat.com" data-width="100%" data-numposts="10"></div>
+            </div>
+            </div>
 
     </div>
 
