--- a/likethat.html
+++ b/likethat.html
@@ -184,6 +184,14 @@ margin-right: 3%;
         p{
             font-size: 15;
         }
+        .thumb img{
+            height: 105.9;
+            width: 189;
+        }
+
+        p{
+            margin-top: 37.95;
+        }
         }
     </style>
     
