--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@
             
         }
 
+        .thumb img{
+            height: 105.9;
+            width: 189;
+        }
+
+        p{
+            margin-top: 37.95;
+        }
+
         body{
             background-color: black;
             background-image: none;
