--- a/likethat.html
+++ b/likethat.html
@@ -101,6 +101,7 @@
         .thumb img{
             height: 141;
             width: 252;
+            border: 3px solid orangered;
         }
 
         .thumb{
@@ -176,6 +177,8 @@ margin-right: 3%;
         @media only screen and (max-width: 700px){
             h1{
             font-size: 25;
+            padding-top: 3%;
+            padding-bottom: 3%;
         }
         h2{
             font-size: 20;
