--- a/vermouthrumor.html
+++ b/vermouthrumor.html
@@ -176,6 +176,8 @@ margin-right: 3%;
         @media only screen and (max-width: 700px){
             h1{
             font-size: 25;
+            padding-top: 3%;
+            padding-bottom: 3%;
         }
         h2{
             font-size: 20;
@@ -187,6 +189,7 @@ margin-right: 3%;
         .thumb img{
             height: 105.9;
             width: 189;
+            border: 3px solid orangered;
         }
 
         p{
