--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         .thumb img{
             height: 141;
             width: 252;
+            border: 3px solid orangered;
         }
 
         .row{
@@ -169,6 +170,7 @@
         .thumb img{
             height: 105.9;
             width: 189;
+            border: 3px solid orangered;
         }
 
         p{
