--- a/vermouthrumor.html
+++ b/vermouthrumor.html
@@ -174,6 +174,9 @@ margin-right: 3%;
 }
 }
         @media only screen and (max-width: 700px){
+            nav{
+                display: none;
+            }
             h1{
             font-size: 25;
             padding-top: 3%;
