--- a/vermouthrumor.html
+++ b/vermouthrumor.html
@@ -198,6 +198,12 @@ margin-right: 3%;
         p{
             margin-top: 37.95;
         }
+
+        .video{
+            position: sticky;
+            top: 0;
+            z-index: 10;
+        }
         }
     </style>
 
@@ -217,9 +223,9 @@ margin-right: 3%;
                 <video controls width = 100%>
                     <source src = "rumor.mp4">
                 </video>
-                <h2>Vermouth amv rumors</h2>
+                
         </div>
-
+        <h2>Vermouth amv rumors</h2>
         <div class ="sec1sec2" id = "row">
 
 
